deploy/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        volumeMounts:
          - name: registry-config
            mountPath: /etc/docker/registry
            readOnly: true
          - name: registry-tls
            mountPath: /etc/docker/tls
            readOnly: true
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
          name: http
      volumes:
        - name: registry-config
          configMap:
            name: registry-config
        - name: registry-tls
          secret:
            secretName: registry-tls
