deploy/registry/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: PathPrefix(`/v2`)
    services:
    - kind: Service
      name: registry
      port: 5000
      scheme: https
      serversTransport: registry-tls
  tls:
    secretName: registry-tls
